# habr-switches-perf-test

./: .gitignore  README.md  algo.h  algos.cpp  algos.h  catch.hpp  common.h  graphs.ipynb  main.cpp  meson.build  meson_options.txt  run-benchmark.sh  run-benchmarks.sh  run-icelake-aws.txt  test_main.cpp  util.h
inputs/: wp_fragment.txt
results/: res-amd-epyc.csv  res-icelake-aws.csv  results.xlsx  run-amd-epyc.txt  run-icelake-aws.txt
